--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,19 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@apollo/client": "^3.5.8",
+    "@hookform/resolvers": "^1.0.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "apollo-link-context": "^1.0.20",
+    "date-fns": "^2.28.0",
+    "graphql": "^16.2.0",
+    "react-hook-form": "^6.11.0",
+    "react-router-dom": "^5.2.0",
+    "typeface-montserrat": "^1.1.13",
+    "yup": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
